# cosmic-ssh-launcher

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
i18n/en/: cosmic_ssh_launcher.ftl
resources/: app.desktop
src/: app.rs  i18n.rs  main.rs
